--- a/index.css
+++ b/index.css
@@ -102,7 +102,7 @@ ul {
 header{
   width: 100%;
   height: 100px;
-  background-color:rgb(230,228,231);
+  background-image: linear-gradient(rgba(191,239,255,1), rgba(91,124,178,1));
  
 }
 header h1{
@@ -119,7 +119,6 @@ img{
 
         /* Навігаційна панель*/
         nav{
-          background-color: #70eada;
           margin-left: 0px;
           margin-right: 0px;
           width: 100%;
@@ -127,7 +126,7 @@ img{
           
         }
         nav ul{
-			height:100%;
+			   height:100%;
           margin-top: 0;
          text-align: center;
          padding-right: 20px; 
@@ -140,10 +139,12 @@ img{
   margin-left: 15px;
   padding: 2px 5px;
   border-radius: 5px;
-  background-color: #24e2c8;
-  -moz-box-shadow: 5px 5px 5px rgba(68,68,68,0.6), inset -5px -5px 10px #00c5aa;
-  -webkit-box-shadow: 5px 5px 5px rgba(68,68,68,0.6), inset -5px -5px 10px #00c5aa;
-  box-shadow: 5px 5px 5px rgba(68,68,68,0.6), inset -5px -5px 10px #00c5aa;
+    -moz-box-shadow: 5px 5px 5px #4169E1, inset -5px -5px 10px #6495ED;
+  -webkit-box-shadow: 5px 5px 5px #4169E1, inset -5px -5px 10px #6495ED;
+  box-shadow: 5px 5px 5px #4169E1, inset -5px -5px 10px #6495ED;
+  opacity: 1;
+  font-weight: normal;
+  font-size: 17px;
    
  } 
  nav ul li:hover{      
@@ -152,6 +153,7 @@ img{
 
 nav a{
   text-decoration: none;
+  color: white;
    
 } 
 /* Панель пошуку*/
@@ -252,7 +254,7 @@ height: 20px;
     background-image: url(iv-frn.jpg);
   }
 
-/*Основна секція*/
+/*main section*/
 .main{
     height: 300px;
     background-color: #bbeee7;
@@ -268,6 +270,15 @@ height: 20px;
   margin-top:-40px;
   background-color: #009bdf;
   position: relative;
+}
+.main article.orange{
+  background-color:#f58220 ;
+}
+.main article.red{
+  background-color:#ed1c24 ;
+}
+.main article.green{
+  background-color:#00a651;
 }
 .main article h2{
   font-family: Calibri, "Trebuchet MS", sans-serif;
@@ -301,7 +312,7 @@ width: 100%;
 }
 
 
-/*Діви в основній частині*/
+/*Effects with content*/
  .reveal-wrapper h1{
   margin: 0;
   padding: 100px;
@@ -350,10 +361,16 @@ height: 100%;
   width: 100%;
   height: 80%;
   -webkit-transition:height 0.6s ease;
-
-  
+      }
+.reveal-top.place{
+  background-image: url(images/place.png);
 }
-
+.reveal-top.hotels{
+  background-image: url(images/hotels.jpg);
+}
+.reveal-top.food{
+  background-image: url(images/food.png);
+}
 .reveal-content h1{
   color: black;
 }
