--- a/index.css
+++ b/index.css
@@ -543,8 +543,21 @@ color: antiquewhite;
     margin-left: 15px;
     margin-right: 15px;
     margin-top: 0px;
+    text-align: left;
+    vertical-align: middle;
+    font-size: 20px;
 }
-
+.footer-bottom-left span img{
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  vertical-align: middle;
+}
+.footer-bottom-left span img.mail{
+  width: 30px;
+  height: 20px;
+  border-radius: 0px;
+}
 .share-links {
     margin: 15px;
     text-align: right;
