--- a/mains.css
+++ b/mains.css
@@ -25,38 +25,40 @@ div {
     padding: 0;
     border: 0;
     outline: 0;
-    font-size: 100%;
     vertical-align: baseline;
     background: transparent;
 }
 
 /*nav*/
 nav {
+    position: fixed;
+    top: 0;
+    right: 0px;
     float: right;
     display: inline-block;
     text-align: right;
     text-align: center;
     margin-top: 0px;
     margin-bottom: 0px;
-    padding-bottom: 10px;
+    padding-bottom: 0px;
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 30px;
+    padding-top: 20px;
     height: 40px;
-}
+    }
 
 ul > li {
     display: inline-block;
     height: auto;
-    font-family: "MuseoSans";
-    font-size: 15px;
+    font-family: Tahoma,sans-serif;
+    font-size: 20px;
     cursor: pointer;
 }
 
 ul li a {
     line-height: 10px;
     padding: 10px;
-    color: gainsboro;
+    color: burlywood;
 text-decoration: none;
 }
 
@@ -64,10 +66,46 @@ ul li a:hover {
     color: lightgreen;
 text-decoration: overline;
 }
+
+ul li a:active {
+    border: 1px #fff solid;
+    padding: 7px 20px;
+    color: #fff;
+    background: none;
+}
+
    
 
 
 /*END NAV*/
+
+/*button search*/
+.search {
+padding-top: 50px;
+    padding-right: 30px;
+}
+
+.settings {
+float: right;
+    padding-top: 15px;
+}
+
+input[type="submit"] {
+    align-items: flex-start;
+    text-align: center;
+    cursor: pointer;
+    color: buttontext;
+    box-sizing: border-box;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    border-width: 0.7em;
+    border-style: none;
+    border-color: buttonface;
+    color: blue;
+}
+
+/*button search*/
+
 
 /*logotyp*/
 
@@ -76,226 +114,254 @@ text-decoration: overline;
     padding-bottom: 10px;
     padding-left: 110px;
     padding-right: 10px;
-    padding-top: 50px;
-    
+    padding-top: 20px;
+    height: 250px;
+    }
+
+.logo_title {
+height: 90px;
 }
 
-.logo_title h4 {
+.logo_title h4 a {
     text-align: left;
     margin: 0px;
     padding: 5px 0px 5px 0px;
     color: aliceblue;
-    font-size: 20px;
+    font-size: 35px;
     font-family: MuseoSans,Helvetica,Arial,sans-serif;
-}
+    text-decoration: none;
+    }
 
-.logo_title h2 {
+.logo_title h1 a {
     text-align: left; 
     margin: 0px;
     padding: 5px 0px 5px 0px;
+    padding-left: 0px;
     color: aliceblue;
-    font-size: 25px;
+    font-size: 52px;
     font-family: MuseoSans,Helvetica,Arial,sans-serif;
-}
-/*PAGE MAIN */
-.page-main {
-    padding: 0px;
-    min-height: 1000px;
-    width: 100%;
-    position: relative;
-    box-sizing: border-box;
-    line-height: 1.5;
-    font-family: MuseoSans,Helvetica,Arial,sans-serif;
-font-size: 16px;
-color: #1A1919;
-background-color: #F9F2EC;
-}
-
-.page-main a {
-font-family: Calibri, Trebuchet MS, sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    color: #009933;
-text-decoration: none;
-}
-
-.page-main a:hover {
-color: #99FF99;}
-
-
-.row {
-    margin-left: 15px;
-    margin-right: 15px;
-    box-sizing: border-box;
-}
-
-.col-md-12 {
-    width: auto;
-    float: left;
-    position: relative;
-min-height: 1px;
-padding-left: 0px;
-padding-right: 0px;
-    padding-top: 20px;
-    margin-top: 0px;
-    margin-left: 0px;
-    margin-bottom: 0px;
-    margin-right: 0px;
-}
-
-.col-sm-5 {
-    width: 31.6667%;
-    float: left;
-        position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-    box-sizing: border-box;
-}
-
-.about {
-background-color: white;
-padding: 10px;}
-
-.pageName {
-    margin: 0;
-    padding: 0 0 0 12px;
-    height: 50px;
-    line-height: 50px;
-    color: #fff;
-    font-family: Calibri, Trebuchet MS, sans-serif;
-    font-size: 20px;
-    font-weight: normal;
-    text-transform: uppercase;
-    background-color: #009933;
-    text-align: center;
+    text-decoration: none;
     }
 
-.text-label {
-    font-weight: 700;
-    box-sizing: border-box;
+.logo_title h4 a:hover {
+    color: lightgreen;
 }
-
-ul {list-style: none;
-margin: 0px;
-    }
-
-.kmenu a {
-     color: lawngreen;
-    font-size: 18px;
-}
-
-.col-sm-7 {
-    width: 60%;
-    float: left;
-    position: relative;
-min-height: 1px;
-padding-left: 15px;
-padding-right: 15px;
-    box-sizing: border-box;
-    }
-
-.pageTitle {
-    color: #009933;
-    text-align: center;
-    }
-
-h1 {
-        font-size: 22px;
-    line-height: 1.25em;
-    font-family: Trebuchet MS,sans-serif;
-    text-transform: uppercase;
-    margin: 0px;
-    padding: 10px;
-    padding-bottom: 15px;
-} 
-
-.article-section {
-    margin-bottom: 40px;
-    box-sizing: border-box;
-    background-color: white;
-}
-
-h2 {
-text-align: center;
-  font-size: 20px;  
-} 
-
-p {
-        margin-top: 0px;
-        margin-right: 0px;
-        margin-bottom: 1.55em;
-        margin-left: 0px;
-    padding-left: 15px;
-    padding-right: 15px;
-    box-sizing: border-box;
-}
-
-/* END PAGE-MEIN*/
-
-/*FOOTER*/
-
-footer {
-    margin: 0;
-    min-width: 320px;
-    max-width: 100%;
-    height: auto;
-    position: relative;
-    background: #322016;
     
+.logo_title h1 a:hover {
+    color: lightgreen;
 }
 
-@media (min-width: 768px)
-.footer-bottom .container {
-    width: 750px;
-    margin-right: 0;
-    margin-left: 0;
-    padding-left: 15px;
-    padding-right: 15px;
-}
+/*END logotype*/
 
-@media (min-width: 768px)
-.footer .col-sm-12 {
-    width: 100%;
-        float: left;
-    position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.footer-bottom .footer-bottom-left {
-    padding: 40px;
-}
-
-.footer-bottom .footer-bottom-left .copyright {
-    color: #8F6F54;
-    font-size: 20px;
-    display: block;
-    float: left;
-    margin-right: 10px;
-}
-
-.footer-bottom {
-    padding: 15px;
-    color: burlywood;
-    font-size: 20px;
-    display: block;
-    margin-right: 10px;
+.down_content {
     text-align: center;
+    margin-top: 220px;
 }
 
-.footer-bottom a {
-color: burlywood;
-margin: 15px;
-text-decoration: none;
+.down {
+    margin: 0px;
+    padding: 5px 0px 5px 0px;
+    color: aliceblue;
+    font-size: 45px;
+    font-weight: bold;
+    font-family: MuseoSans,Helvetica,Arial,sans-serif;
+    text-decoration: none;
 }
 
-.footer-bottom a:hover {
-color: antiquewhite;
+.down:hover {
+    color: lightgreen;
 }
 
-.footer-bottom-left span {
+.scroll-down {
+    display: block;
+    background-image: url("image/scroll_down_icon.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: 2s ease-in-out 0s normal none infinite running fade_move_down;
+    width: 36px;
+    height: 30px;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    margin: 10px -18px;
+    z-index: 1;
+    text-decoration: none;
+}
+
+
+/*PAGE MAIN */
+ .page-main {
+     padding: 0px;
+     height: 4020px;
+         width: 100%;
+     position: relative;
+     box-sizing: border-box;
+     line-height: 1.5;
+     font-family: MuseoSans,Helvetica,Arial,sans-serif;
+ font-size: 16px;
+ color: #1A1919;
+ background-color: #F9F2EC;
+ }
+ 
+ .page-main a {
+ font-family: Calibri, Trebuchet MS, sans-serif;
+  font-size: 20px;
+     font-weight: bold;
+     color: #009933;
+ text-decoration: none;
+ }
+ .page-main a:hover {
+ color: #99FF99;}
+ 
+ .page-main .row {
+     margin-left: 15px;
+     margin-right: 15px;
+     box-sizing: border-box;
+ }
+ 
+ .col-md-12 {
+     width: auto;
+     float: left;
+     position: relative;
+ min-height: 1px;
+ padding-left: 0px;
+ padding-right: 0px;
+     padding-top: 0px;
+     margin-top: 0px;
+     margin-left: 0px;
+     margin-bottom: 0px;
+     margin-right: 0px;
+ }
+ 
+ .col-sm-5 {
+     width: 31.6667%;
+     float: left;
+         position: relative;
+     min-height: 1px;
+     padding-left: 15px;
+     padding-right: 15px;
+     box-sizing: border-box;
+ }
+ 
+ .about {
+ background-color: white;
+ padding: 10px;}
+ 
+ .pageName {
+     margin: 0;
+     padding: 0 0 0 12px;
+     height: 50px;
+     line-height: 50px;
+     color: #fff;
+     font-family: Calibri, Trebuchet MS, sans-serif;
+     font-size: 20px;
+     font-weight: normal;
+     text-transform: uppercase;
+     background-color: #009933;
+     text-align: center;
+     }
+ 
+ .text-label {
+     font-weight: 700;
+     box-sizing: border-box;
+ }
+ 
+ ul {list-style: none;
+ margin: 0px;
+     }
+ 
+ .kmenu a {
+      color: lawngreen;
+     font-size: 18px;
+ }
+ 
+ .col-sm-7 {
+     width: 60%;
+     float: left;
+     position: relative;
+ min-height: 1px;
+ padding-left: 15px;
+ padding-right: 15px;
+     box-sizing: border-box;
+     }
+ 
+ .pageTitle {
+     color: #009933;
+     text-align: center;
+     }
+ 
+ .pageTitle h1 {
+         font-size: 22px;
+     line-height: 1.25em;
+     font-family: Trebuchet MS,sans-serif;
+     text-transform: uppercase;
+     margin: 0px;
+     padding: 10px;
+     padding-bottom: 15px;
+ } 
+ 
+ .article-section {
+     margin-bottom: 40px;
+     box-sizing: border-box;
+     background-color: white;
+     height: inherit;
+ }
+ 
+ .article-section h2 {
+ text-align: center;
+    } 
+
+.article-section h2 a {
+    font-size: 35px;  
+ } 
+ 
+ p {
+         margin-top: 0px;
+         margin-right: 0px;
+         margin-bottom: 1.55em;
+         margin-left: 0px;
+     padding-left: 15px;
+     padding-right: 15px;
+     box-sizing: border-box;
+ }
+ 
+ /* END PAGE-MEIN*/
+ 
+ /*FOOTER*/
+ 
+ .contacts .container {
+     margin: 0;
+     padding-left: 15px;
+     padding-right: 15px;
+     max-width: 100%;
+     height: 200px;
+     background-color: #322016;
+ }
+
+.contacts .row {
+height: 200px;
+}
+ 
+ .contacts .col-sm-12 {
+     width: 100%;
+         float: left;
+     min-height: 1px;
+     padding: 15px;
+      }
+ 
+ .contacts .contacts-left {
+     padding: 20px;
+ }
+ 
+ .contacts .contacts-left .copyright {
+     color: #8F6F54;
+     font-size: 20px;
+     display: block;
+     float: left;
+     margin-right: 10px;
+ }
+ 
+ .contacts-left span {
     float: left;
     color: #8F6F54;
     margin-bottom: 0px;
@@ -303,25 +369,25 @@ color: antiquewhite;
     margin-right: 15px;
     margin-top: 0px;
 }
-
+ 
 .share-links {
-    margin: 15px;
+margin: 0px;
         text-align: right;}
 
 .share-links a {
-    margin: 15px;
-        text-align: right;
-        transition: opacity 0.2s ease-in-out 0s;
-        transition-property: opacity;
-        transition-duration: 0.2s;
-        transition-timing-function: ease-in-out;
-        transition-delay: 0s;
-    background-color: transparent;
-text-decoration: none;
-    text-decoration-color: -moz-use-text-color;
-    text-decoration-line: none;
-    text-decoration-style: solid;
-    text-align: center;
-}
-
-/*FOOTER*/
+     margin: 15px;
+         text-align: right;
+         transition: opacity 0.2s ease-in-out 0s;
+         transition-property: opacity;
+         transition-duration: 0.2s;
+         transition-timing-function: ease-in-out;
+         transition-delay: 0s;
+     background-color: transparent;
+ text-decoration: none;
+     text-decoration-color: -moz-use-text-color;
+     text-decoration-line: none;
+     text-decoration-style: solid;
+     text-align: center;
+ }
+ 
+ /*FOOTER*/
