--- a/mains.css
+++ b/mains.css
@@ -11,7 +11,7 @@ header {
 background-image: url(image/wpid-vech-rn-y-vano_i_1.jpg);
 background-size: cover;
 max-width: 100%;
-height: 650px;
+height: 450px;
 box-sizing: border-box;
     position: relative;
     z-index: 1;
@@ -30,24 +30,9 @@ div {
 }
 
 /*nav*/
-nav {
-    position: fixed;
-    top: 0;
-    right: 0px;
-    float: right;
-    display: inline-block;
-    text-align: right;
-    text-align: center;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
-    height: 40px;
-    }
 
-ul > li {
+/*
+.menu_ul > li {
     display: inline-block;
     height: auto;
     font-family: Tahoma,sans-serif;
@@ -80,35 +65,15 @@ ul li a:active {
 /*END NAV*/
 
 /*button search*/
-.search {
-padding-top: 50px;
-    padding-right: 30px;
-}
 
-.settings {
-float: right;
-    padding-top: 15px;
-}
 
-input[type="submit"] {
-    align-items: flex-start;
-    text-align: center;
-    cursor: pointer;
-    color: buttontext;
-    box-sizing: border-box;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    border-width: 0.7em;
-    border-style: none;
-    border-color: buttonface;
-    color: blue;
-}
 
 /*button search*/
 
 
 /*logotyp*/
 
+/*
 .logo {
      margin: 0px;
     padding-bottom: 10px;
@@ -153,45 +118,17 @@ height: 90px;
 
 /*END logotype*/
 
-.down_content {
-    text-align: center;
-    margin-top: 220px;
-}
-
-.down {
-    margin: 0px;
-    padding: 5px 0px 5px 0px;
-    color: aliceblue;
-    font-size: 45px;
-    font-weight: bold;
-    font-family: MuseoSans,Helvetica,Arial,sans-serif;
-    text-decoration: none;
-}
-
-.down:hover {
-    color: lightgreen;
-}
-
-.scroll-down {
-    display: block;
-    background-image: url("image/scroll_down_icon.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    animation: 2s ease-in-out 0s normal none infinite running fade_move_down;
-    width: 36px;
-    height: 30px;
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    margin: 10px -18px;
-    z-index: 1;
-    text-decoration: none;
-}
-
-
 /*PAGE MAIN */
- .page-main {
-     padding: 0px;
+/* .conteiner_page-main {
+    flex-direction: column;
+      }
+
+.conteiner_page-main, .col-md-12 {
+    display: flex;
+    flex-wrap: wrap;
+}
+*/
+ .conteiner_page-main {
      height: 4020px;
          width: 100%;
      position: relative;
@@ -203,19 +140,21 @@ height: 90px;
  background-color: #F9F2EC;
  }
  
- .page-main a {
+ .conteiner_page-main a {
  font-family: Calibri, Trebuchet MS, sans-serif;
   font-size: 20px;
      font-weight: bold;
      color: #009933;
  text-decoration: none;
  }
- .page-main a:hover {
+ .conteiner_page-main a:hover {
  color: #99FF99;}
  
- .page-main .row {
+ .conteiner_page-main .row {
      margin-left: 15px;
      margin-right: 15px;
+     padding-bottom: 30px;
+     padding-top: 30px;
      box-sizing: border-box;
  }
  
@@ -242,19 +181,19 @@ height: 90px;
      padding-right: 15px;
      box-sizing: border-box;
  }
- 
+
  .about {
  background-color: white;
- padding: 10px;}
+ padding: 20px;
+     }
  
  .pageName {
      margin: 0;
-     padding: 0 0 0 12px;
-     height: 50px;
-     line-height: 50px;
+     padding: 12px;
+      line-height: 50px;
      color: #fff;
      font-family: Calibri, Trebuchet MS, sans-serif;
-     font-size: 20px;
+     font-size: 26px;
      font-weight: normal;
      text-transform: uppercase;
      background-color: #009933;
@@ -264,10 +203,16 @@ height: 90px;
  .text-label {
      font-weight: 700;
      box-sizing: border-box;
- }
+      }
+
+.text-label a {
+    font-family: Calibri, Trebuchet MS, sans-serif;
+     font-size: 22px;
+}
  
- ul {list-style: none;
- margin: 0px;
+ul, .kmenu {
+      list-style: none;
+      margin: 0px;
      }
  
  .kmenu a {
@@ -276,7 +221,7 @@ height: 90px;
  }
  
  .col-sm-7 {
-     width: 60%;
+     width: 68%;
      float: left;
      position: relative;
  min-height: 1px;
@@ -291,14 +236,13 @@ height: 90px;
      }
  
  .pageTitle h1 {
-         font-size: 22px;
+         font-size: 28px;
      line-height: 1.25em;
      font-family: Trebuchet MS,sans-serif;
      text-transform: uppercase;
      margin: 0px;
-     padding: 10px;
-     padding-bottom: 15px;
- } 
+     padding: 20px;
+      } 
  
  .article-section {
      margin-bottom: 40px;
