--- a/index.css
+++ b/index.css
@@ -97,14 +97,11 @@ ul {
         clear: both;
         }  
         
-  /*footer{
-  width: 100%;
-  height: 150px;
-}*/
+/*Header*/
 header{
   width: 100%;
   height: 300px; 
-  background-image: url(iv-frn.jpg);
+  background-image: url(images/iv-frn.jpg);
   } 
 
 
@@ -155,7 +152,9 @@ header{
   border-radius: 5px;
   opacity: 1;
   font-weight: normal;
-  font-size: 17px;
+  font-family: Tahoma,sans-serif;
+  font-size: 20px;
+  cursor: pointer;
    
  } 
 
@@ -169,143 +168,289 @@ nav a:hover{
   color: white;
    } 
 
-/*header hidden*/
-.header_hidden{
-  display: none;
-  width: 100%;
-  height: 100px;
-  background-image: linear-gradient(rgba(191,239,255,1), rgba(91,124,178,1));
- 
+.menu-container a {
+  text-align: center;
+  display: block;
+  padding: 10px 15px;
+  color: white;
+    text-decoration: none;
+        font-family: Tahoma,sans-serif;
+    font-size: 20px;
+    cursor: pointer;
+
 }
 
+.menu-container a:hover {
+text-decoration: underline;
+  }
 
-.header_hidden   nav{
-          margin-left: 0px;
-          margin-right: 0px;
-          width: 100%;
-      
-          
-        }
-  .header_hidden  nav ul{
-         height:100%;
-          margin-top: 0;
-         text-align: right;
-         padding-right: 20px; 
-        
-        }
-
-.header_hidden nav ul li{
-  display: inline-block;
-  list-style-type: none;
-  margin-left: 15px;
-  padding: 2px 5px;
- font-weight: bold;
-  font-size: 17px;
-   
- } 
+  .logo-container {
+    display: none;
+  }
 
 
-.header_hidden nav a{
-  text-decoration: none;
-  color: black;
-  position: relative;
-  text-transform: uppercase;
-   
-} 
-/*header hidden*/
-/* Панель пошуку*/
-.settings{
- text-align: right;
- padding-right: 0px;
- margin-top: 5px;
- margin-bottom: 5px;
-}
-input[type="text"]{
+  .search {
   margin-left: 10px;
-  border-radius: 3px;
-  margin-top: 3px;
+text-align: center;
+  display: block;
+}
+
+
+
+@media (min-width: 600px) {
+
+.header-container, .menu-container, .logo-container {
+    display: flex;
+  flex-wrap: wrap;
   
 }
-input[type="button"]{
-  margin-left: 10px;
-  border-radius: 3px;
-  margin-top: 3px;
-  width: 60px;
+
+.header-container {
+  justify-content: space-between;
+  flex-direction: column-reverse;
+
 }
 
+.menu-container  {
+  list-style: none;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
 
- /* menu of saits language */
-ul.dropdown{
-  display: block;
-float: right;
+.logo-container {
+  flex-direction: column;
+  align-items: center;
+margin-right: auto;
 margin-left: 20px;
-margin-top: 3px;
-margin-right: 20px;
+margin-top: 20px;
+background-color: rgba(0, 120, 201, 0.65);
 }
 
-ul.dropdown li { position: relative; 
-border:2px solid blue;
-padding:3px;
-border-radius: 3px;
-background-image: url(ukr.jpg);
-width: 40px;
-height: 20px;
 
+.slogan {
+  color:white;
+  font-size: 1.3em;
+font-weight: bold;
+}
+
+.menu-container a {
+  text-align: center;
+  display: block;
+  padding: 10px 15px;
+}
+
+
+
+.menu-container input {
+  
+  margin-top: 10px;
+}
+}
+
+
+@media (min-width: 1180px) {
+
+.header-container, .menu-container, .logo-container {
+    display: flex;
+  flex-wrap: wrap;
+  
+}
+
+.header-container {
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.logo-container {
+  background-color: rgba(0, 120, 201, 0.4);
+}
 
 }
- ul.dropdown,
- ul.dropdown-inside {
- list-style-type: none;
- padding: 0;
+
+
+
+
+
+/*PAGE MAIN */
+ .page-main {
+     padding: 0px;
+     height: 100%;
+         width: 100%;
+     position: relative;
+     box-sizing: border-box;
+     line-height: 1.5;
+     font-family: MuseoSans,Helvetica,Arial,sans-serif;
+ font-size: 16px;
+ color: #1A1919;
+ background-color: #F9F2EC;
  }
- ul.dropdown-inside {
- position: absolute;
- left: -9999px;
+ 
+ .page-main a {
+ font-family: Calibri, Trebuchet MS, sans-serif;
+  font-size: 20px;
+     font-weight: bold;
+     color: #ed1c24;
+ text-decoration: none;
  }
- ul.dropdown li.dropdown-top {
- display: inline;
- float: left;
- margin: 0 1px 0 0;
+ .page-main a:hover {
+ color: #99FF99;}
+ 
+ .page-main .row {
+     margin-left: 15px;
+     margin-right: 15px;
+     box-sizing: border-box;
+ }
+ 
+ .col-md-12 {
+     width: auto;
+     float: left;
+     position: relative;
+ min-height: 1px;
+ padding-left: 0px;
+ padding-right: 0px;
+     padding-top: 0px;
+     margin-top: 0px;
+     margin-left: 0px;
+     margin-bottom: 0px;
+     margin-right: 0px;
+ }
+ 
+ .col-sm-5 {
+     width: 31.6667%;
+     float: left;
+         position: relative;
+     min-height: 1px;
+     padding-left: 15px;
+     padding-right: 15px;
+     box-sizing: border-box;
+ }
+ 
+ .about {
+ background-color: white;
+ padding: 10px;}
+ 
+ .pageName {
+     margin: 0;
+     padding: 0 0 0 12px;
+     height: 50px;
+     line-height: 50px;
+     color: #fff;
+     font-family: Calibri, Trebuchet MS, sans-serif;
+     font-size: 20px;
+     font-weight: normal;
+     text-transform: uppercase;
+     background-color: #ed1c24;
+     text-align: center;
+     }
+     @media all and (max-width: 650px){
+      .col-sm-5{
+        width: 100%;
+      }
+     section .col-sm-7{
+        width: 100%
+      }
+     }
+ 
+ .text-label {
+     font-weight: 700;
+     box-sizing: border-box;
+ }
+ 
+ ul {list-style: none;
+ margin: 0px;
+     }
+ 
+ .kmenu a {
+      color:  #FF4500;
+     font-size: 18px;
+     margin-left: 30px;
+ }
+ 
+ .col-sm-7 {
+     width: 68%;
+     float: left;
+
+ min-height: 1px;
+ padding-left: 15px;
+ padding-right: 15px;
+     }
+ 
+ .pageTitle {
+     color: #ed1c24;
+     text-align: center;
+     clear: both;
+     }
+ 
+ .pageTitle h1 {
+         font-size: 22px;
+     line-height: 1.25em;
+     font-family: Trebuchet MS,sans-serif;
+     text-transform: uppercase;
+     margin: 0px;
+     padding: 10px;
+     padding-bottom: 15px;
+ } 
+ 
+ .article-section {
+     margin-bottom: 0px;
+     box-sizing: border-box;
+     background-color: white;
+     height: inherit;
+     color:#541906;
 
  }
- ul.dropdown li.dropdown-top a {
- padding: 3px 10px 4px;
- display: block;
- }
- ul.dropdown a.dropdown-top { background: #efefef; }
- ul.dropdown a.dropdown-top:hover { padding: 2px 10px 5px; }
- ul.dropdown li.dropdown-top:hover .dropdown-inside {
- display: block;
- left: 0;
- }
- ul.dropdown .dropdown-inside { background: #fff; }
- ul.dropdown .dropdown-inside a:hover { background: #efefef; }
- li.dropdown-top img{
+  .article-section .wrapper {
+    margin: 10px;
+     display: flex;
+  flex-wrap: wrap; 
+    justify-content: space-around;
+  }
+.wrapper h4{
+  font-size: 14px;
+}
+  .article-section .wrapper img{
+    margin:0 auto;
+  }
+ .article-section h2, 
+ .article-section h1 {
+ text-align: center;
+ color:#ed1c24;
+    } 
+
+.article-section h2 a {
+    font-size: 35px;  
+ } 
+ .article-section a img{
   display: inline-block;
-  width: 20px;
-  height: 20px;
-  vertical-align: center;
-  padding-top: 3px;
-
+  float: left;
+  width: 400px;
+  height: 350px;
+  padding: 15px;
+  padding-bottom: 0px;
  }
-  ul.dropdown-inside li:nth-child(1){
-     background-image: url(ukr.jpg);
-       background-repeat: repeat-x;
-      display: inline-block;
-     width: 40px;
-  }
-   ul.dropdown-inside li:nth-child(2){
-     background-image: url(pol.jpg);
-       background-repeat: repeat-x;
-      display: inline-block;
-     width: 40px;
-  }
-   ul.dropdown-inside li:nth-child(3){
-     background-image: url(eng.jpg);
-     background-repeat: repeat-x;
-      display: inline-block;
-     width: 40px;
-  }
+ .article-section ul li{
+  list-style:none;
+  margin-left: 15px;
+  text-align: justify;
+   text-indent: 20px;
+   padding-right: 15px;
+ }
+ .article-section ul span{
+  font-weight: bold;
+ }
+ 
+ .pageTitle p {
+     text-indent: 20px;
+     margin-top: 0px;
+     margin-top: 0px;
+     margin-right: 0px;
+     margin-left: 0px;
+     padding-left: 15px;
+     padding-right: 15px;
+     color:#541906;
+     box-sizing: border-box;
+     text-align: justify;
+ } 
 
 
 /*main section*/
@@ -389,6 +534,11 @@ height: 0%;
 height: 100%;
 
 }
+.reveal-content a{
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
 .reveal-wrapper .reveal-content{
 	 overflow: hidden;
    position: absolute;
@@ -438,27 +588,14 @@ height: 100%;
 
 /*panel of event*/
   .main h2{
-
+    color: #541906;
     text-align: center;
     margin-left: 0px;
     font-family: Calibri, Trebuchet MS, sans-serif;
     margin-top: 10px;
     font-size: 24px;
   }
-  /*
-  .main  h2 span{
-    display: inline-block;
-    border-radius: 20px;
-    padding:5px;
-    width: 40px;
-    height: 40px;
-    background-image: url(images/info.png);
-    margin-bottom: 5px;
-    margin-right: 5px;
-    margin-left: 10px;
-    text-align: center;
-  }
-*/
+
  .main .cols{
 background-color: #F9F2EC;
 
@@ -494,8 +631,9 @@ background-color: #F9F2EC;
 .news-item {
   background-color: white;
   margin: 0 .5em .8em;
-  box-shadow: 5px 5px 5px #bbeee7;
-      /*border: 2px solid #541906;*/
+  
+  box-shadow: 5px 5px 5px #663333;
+
 
 }
 
@@ -665,12 +803,5 @@ footer {
     margin-top: 20px;
 	
 }
-.header_hidden nav ul li{
-  display: block;
-  font-weight: bold;
-  font-size: 15px;   
- } 
-input[type="text"]{
-  width: 100px;
-}
+
 }
