--- a/main.css
+++ b/main.css
@@ -37,510 +37,6 @@ ul {
         .row{
       height:100%;
     }
-        .container .cols{
-          float: left;
-          margin:0 0 ;
-          padding: 0;
-          
-          text-align: center;
-        }
-        .container .cols.col-1{
-          width: 8.333333%;
-        }
-        .container .cols.col-2{
-          width: 16.666666%;
-        }
-        .container .cols.col-3{
-          width: 25%;
-        }
-        .container .cols.col-4{
-          width: 33.333333%;
-        }
-        .container .cols.col-5{
-          width: 41.666666%;
-        }
-        .container .cols.col-6{
-          width: 50%;
-        }
-        .container .cols.col-7{
-          width: 58.333333%;
-        }
-        .container .cols.col-8{
-          width: 66.666666%;
-        }
-        .container .cols.col-9{
-          width: 75%;
-        }
-        .container .cols.col-10{
-          width: 83.333333%;
-        }
-        .container .cols.col-11{
-          width: 91.666666%;
-        }
-        .container .cols.col-12{
-          width: 100%;
-        }  
-        .container:before,
-        .container:after,
-        .row:after,
-        .row:before,
-        .clear:before,
-        .clear:after{
-        content: " ";
-        display: block;
-        }
-
-        .container:after,
-        .row:after,
-        .clear:after{
-        clear: both;
-        }  
-        
-  /*footer{
-  width: 100%;
-  height: 150px;
-}*/
-header{
-  width: 100%;
-  height: 300px; 
-  background-image: url(iv-frn.jpg);
-  } 
-
-
-  header .row .cols img{
-        margin-left: 50px;
-        margin-top: 20px;
-        display: block;
-        
-       text-align: left; 
-       clear: both;
-
-        }
-  header .row .cols h2,
-  header .row .cols h3
-  {
-  display: block;
-  text-align: left;
-  margin-left: 50px;
-  color: white;
-  font-size: 22px;
-  font-family: Calibri, "Trebuchet MS", sans-serif;
-  }
-  header .row .cols h2{
-  font-size: 30px;
-    }
-
-        /* Навігаційна панель*/
-        nav{
-          margin-left: 0px;
-          margin-right: 0px;
-          width: 100%;
-      
-          
-        }
-        nav ul{
-         height:100%;
-          margin-top: 0;
-         text-align: right;
-         padding-right: 20px; 
-        
-        }
-
- nav ul li{
-  display: inline-block;
-  list-style-type: none;
-  margin-left: 15px;
-  padding: 2px 5px;
-  border-radius: 5px;
-  opacity: 1;
-  font-weight: normal;
-  font-size: 17px;
-   
- } 
-
-
-nav a{
-  text-decoration: none;
-  color: white;
-   } 
-nav a:hover{
-  text-decoration: underline;
-  color: white;
-   } 
-
-/*header hidden*/
-.header_hidden{
-  display: none;
-  width: 100%;
-  height: 100px;
-  background-image: linear-gradient(rgba(191,239,255,1), rgba(91,124,178,1));
- 
-}
-
-
-.header_hidden   nav{
-          margin-left: 0px;
-          margin-right: 0px;
-          width: 100%;
-      
-          
-        }
-  .header_hidden  nav ul{
-         height:100%;
-          margin-top: 0;
-         text-align: right;
-         padding-right: 20px; 
-        
-        }
-
-.header_hidden nav ul li{
-  display: inline-block;
-  list-style-type: none;
-  margin-left: 15px;
-  padding: 2px 5px;
- font-weight: bold;
-  font-size: 17px;
-   
- } 
-
-
-.header_hidden nav a{
-  text-decoration: none;
-  color: black;
-  position: relative;
-  text-transform: uppercase;
-   
-} 
-/*header hidden*/
-/* Панель пошуку*/
-.settings{
- text-align: right;
- padding-right: 0px;
- margin-top: 5px;
- margin-bottom: 5px;
-}
-input[type="text"]{
-  margin-left: 10px;
-  border-radius: 3px;
-  margin-top: 3px;
-  
-}
-input[type="button"]{
-  margin-left: 10px;
-  border-radius: 3px;
-  margin-top: 3px;
-  width: 60px;
-}
-
-
- /* menu of saits language */
-ul.dropdown{
-  display: block;
-float: right;
-margin-left: 20px;
-margin-top: 3px;
-margin-right: 20px;
-}
-
-ul.dropdown li { position: relative; 
-border:2px solid blue;
-padding:3px;
-border-radius: 3px;
-background-image: url(ukr.jpg);
-width: 40px;
-height: 20px;
-
-
-}
- ul.dropdown,
- ul.dropdown-inside {
- list-style-type: none;
- padding: 0;
- }
- ul.dropdown-inside {
- position: absolute;
- left: -9999px;
- }
- ul.dropdown li.dropdown-top {
- display: inline;
- float: left;
- margin: 0 1px 0 0;
-
- }
- ul.dropdown li.dropdown-top a {
- padding: 3px 10px 4px;
- display: block;
- }
- ul.dropdown a.dropdown-top { background: #efefef; }
- ul.dropdown a.dropdown-top:hover { padding: 2px 10px 5px; }
- ul.dropdown li.dropdown-top:hover .dropdown-inside {
- display: block;
- left: 0;
- }
- ul.dropdown .dropdown-inside { background: #fff; }
- ul.dropdown .dropdown-inside a:hover { background: #efefef; }
- li.dropdown-top img{
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  vertical-align: center;
-  padding-top: 3px;
-
- }
-  ul.dropdown-inside li:nth-child(1){
-     background-image: url(ukr.jpg);
-       background-repeat: repeat-x;
-      display: inline-block;
-     width: 40px;
-  }
-   ul.dropdown-inside li:nth-child(2){
-     background-image: url(pol.jpg);
-       background-repeat: repeat-x;
-      display: inline-block;
-     width: 40px;
-  }
-   ul.dropdown-inside li:nth-child(3){
-     background-image: url(eng.jpg);
-     background-repeat: repeat-x;
-      display: inline-block;
-     width: 40px;
-  }
-
-
-/*main section*/
-.main{
-    height: 300px;
-    background-color: #F9F2EC;
-    text-align: center;
-
-}
-.main article{
-  width: 80%;
-  float:left;
-  height: 300px;
-  margin-left: 10%; 
-  margin-right: 10%; 
-  margin-top:-40px;
-  background-color: #009bdf;
-  position: relative;
-}
-.main article.orange{
-  background-color:#f58220 ;
-}
-.main article.red{
-  background-color:#ed1c24 ;
-}
-.main article.green{
-  background-color:#00a651;
-}
-.main article h2{
-  font-family: Calibri, "Trebuchet MS", sans-serif;
-  
-  font-size: 21px;
-  font-weight: normal;
-  color:white;
-  vertical-align: baseline;
-  line-height: 30px;
-  margin-top:5px;
-}
-.main article h2 a{
-   color:white;
-   text-transform: uppercase;
-   text-decoration: none;
-
-}
-.main article h2 a:hover{
-   color:white;
-   text-transform: uppercase;
-   text-decoration: underline;
-
-}
-.main article .content{
-position: absolute;
-top: 12%;
-left: 0;
-background-color: white;
-height: 270px;
-width: 100%;
-}
-
-
-/*Effects with content of main part*/
-
-.reveal-wrapper{
- 
-position: relative;
-height:270px;}
-
-.reveal-wrapper h1{
-  margin: 0;
-  padding: 100px;
-  color: white;
-}  
- 
-
-.reveal-wrapper:hover .reveal-top{
-height: 0%;
-}
-.reveal-wrapper:hover .reveal-content{
-  top:0;
-  left:0;
-height: 100%;
-
-}
-.reveal-wrapper .reveal-content{
-   overflow: hidden;
-   position: absolute;
-  top: 80%;
-  left: 0;  
-  color:black ;
-  background:white;
-  width:100%;
-  height:20%;
-  -webkit-transition:all 0.6s ease;
-  font-size: 17px;
-  font-family: Calibri, "Trebuchet MS", sans-serif;
-  padding: 5px;
-   
-}
-.reveal-top{
-  overflow: hidden;
-  background-image: url(images/vartoPobachit.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 80%;
-  -webkit-transition:height 0.6s ease;
-      }
-.reveal-top.place{
-  background-image: url(images/place.png);
-}
-.reveal-top.hotels{
-  background-image: url(images/hotels.jpg);
-}
-.reveal-top.food{
-  background-image: url(images/food.png);
-}
-.reveal-content h1{
-  color: black;
-}
-.reveal-content:hover .more_about{
- position: absolute;
- right: 0;
- bottom: 0;
-  color:blue;
-  font-size: 16px;
-}
-
-/*panel of event*/
-  .main h2{
-
-    text-align: center;
-    margin-left: 0px;
-    font-family: Calibri, Trebuchet MS, sans-serif;
-    margin-top: 10px;
-    font-size: 24px;
-  }
-  /*
-  .main  h2 span{
-    display: inline-block;
-    border-radius: 20px;
-    padding:5px;
-    width: 40px;
-    height: 40px;
-    background-image: url(images/info.png);
-    margin-bottom: 5px;
-    margin-right: 5px;
-    margin-left: 10px;
-    text-align: center;
-  }
-*/
- .main .cols{
-background-color: #F9F2EC;
-
- } 
- .main .color{
-   background-color:#f3e5d8;
-   margin-top:6px;
- }
-.event{
-  margin-top: 25px;
-  height: 100%
-}
-.news-container, .news {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.news-container {
-  flex-direction: column;
-  height: 350 px;
-  background-color: #bbeee7
-  padding: 1em;
-  
-}
-
-.news-header {
-  margin: auto;
-  font-size: 150%;
-  color: #541906;
-  padding-bottom: 0.5em;
-}
-
-.news {
-  justify-content: space-around;
-}
-
-.news-item {
-  background-color: white;
-  margin: 0 .5em .8em;
-  box-shadow: 5px 5px 5px #663333;
-      /*border: 2px solid #541906;*/
-
-}
-
-.news-item:hover {
-  font-weight: bold;
-      opacity: 0.8;
-      border: 2px solid blue;
-}
-
-.news-link a {
-  color: #541906;
-  text-decoration: none;
-}
-
-.news-link {
-  text-align: center;
-}
-
-.allnews {
-  margin: auto;
-  padding-top: 0.7em;
-}
-
-.allnews a {
-  color: #541906;
-  text-decoration: none;
-  font-weight: bold;
-} 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -697,12 +193,15 @@ input[type="text"]{
   padding: 10px 15px;
   color: white;
     text-decoration: none;
+     font-family: Tahoma,sans-serif;
+     font-size: 20px;
 
 }
 
 .menu-container a:hover {
 text-decoration: underline;
-  }
+ color: lightgreen;
+  } 
 
   .logo-container {
     display: none;
@@ -713,8 +212,9 @@ text-decoration: underline;
   margin-left: 10px;
     text-align: center;
   display: block;
+   margin-top: 2px;
+  
 }
-
 
 
 @media (min-width: 600px) {
@@ -735,12 +235,14 @@ text-decoration: underline;
   list-style: none;
   margin-right: 20px;
   margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .logo-container {
   flex-direction: column;
   align-items: center;
-margin-right: auto;
+    margin-right: auto;
+margin-bottom: auto;
 margin-left: 20px;
 margin-top: 20px;
 background-color: rgba(0, 120, 201, 0.65);
@@ -751,6 +253,7 @@ background-color: rgba(0, 120, 201, 0.65);
   color:white;
   font-size: 1.3em;
 font-weight: bold;
+text-align: center;
 }
 
 .menu-container a {
@@ -768,7 +271,7 @@ font-weight: bold;
 }
 
 
-@media (min-width: 1180px) {
+@media (min-width: 1305px) {
 
 .header-container, .menu-container, .logo-container {
     display: flex;
@@ -793,9 +296,9 @@ font-weight: bold;
 
 
 body {
-    font-family: Tahoma,sans-serif;
+    /*font-family: Tahoma,sans-serif;
     font-size: 12px;
-    line-height: 18px;
+    line-height: 18px;*/
     margin: 0;
 }
 
@@ -823,105 +326,6 @@ div {
     background: transparent;
 }
 
-/*nav*/
-
-/*
-.menu_ul > li {
-    display: inline-block;
-    height: auto;
-    font-family: Tahoma,sans-serif;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-ul li a {
-    line-height: 10px;
-    padding: 10px;
-    color: burlywood;
-text-decoration: none;
-}
-
-ul li a:hover {
-    color: lightgreen;
-text-decoration: overline;
-}
-
-ul li a:active {
-    border: 1px #fff solid;
-    padding: 7px 20px;
-    color: #fff;
-    background: none;
-}
-
-   
-
-
-/*END NAV*/
-
-/*button search*/
-
-
-
-/*button search*/
-
-
-/*logotyp*/
-
-/*
-.logo {
-     margin: 0px;
-    padding-bottom: 10px;
-    padding-left: 110px;
-    padding-right: 10px;
-    padding-top: 20px;
-    height: 250px;
-    }
-
-.logo_title {
-height: 90px;
-}
-
-.logo_title h4 a {
-    text-align: left;
-    margin: 0px;
-    padding: 5px 0px 5px 0px;
-    color: aliceblue;
-    font-size: 35px;
-    font-family: MuseoSans,Helvetica,Arial,sans-serif;
-    text-decoration: none;
-    }
-
-.logo_title h1 a {
-    text-align: left; 
-    margin: 0px;
-    padding: 5px 0px 5px 0px;
-    padding-left: 0px;
-    color: aliceblue;
-    font-size: 52px;
-    font-family: MuseoSans,Helvetica,Arial,sans-serif;
-    text-decoration: none;
-    }
-
-.logo_title h4 a:hover {
-    color: lightgreen;
-}
-    
-.logo_title h1 a:hover {
-    color: lightgreen;
-}
-
-/*END logotype*/
-
-/*PAGE MAIN */
-/* .conteiner_page-main {
-    flex-direction: column;
-      }
-
-.conteiner_page-main, .col-md-12 {
-    display: flex;
-    flex-wrap: wrap;
-}
-*/
  .conteiner_page-main {
      height: 4020px;
          width: 100%;
@@ -1064,68 +468,129 @@ ul, .kmenu {
  }
  
  /* END PAGE-MEIN*/
- 
- /*FOOTER*/
- 
- .contacts .container {
-     margin: 0;
-     padding-left: 15px;
-     padding-right: 15px;
-     max-width: 100%;
-     height: 200px;
-     background-color: #322016;
+
+ /*PAGE NEWS*/
+
+ .news_page_container, .news_row, .next_news, .read_more {
+  display: flex;
+  flex-wrap: wrap;
  }
 
-.contacts .row {
-     height: 200px;
-}
- 
- .contacts .col-sm-12 {
-     width: 100%;
-         float: left;
-     min-height: 1px;
-     padding: 15px;
-      }
- 
- .contacts .contacts-left {
-     padding: 20px;
- }
- 
- .contacts .contacts-left .copyright {
-     color: #8F6F54;
-     font-size: 20px;
-     display: block;
-     float: left;
-     margin-right: 10px;
- }
- 
- .contacts-left span {
-    float: left;
-    color: #8F6F54;
-    margin-bottom: 0px;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-top: 0px;
-}
- 
-.share-links {
-margin: 0px;
-        text-align: right;}
+ .news_row {
+  justify-content: space-around;
+  
 
-.share-links a {
-     margin: 15px;
-         text-align: right;
-         transition: opacity 0.2s ease-in-out 0s;
-         transition-property: opacity;
-         transition-duration: 0.2s;
-         transition-timing-function: ease-in-out;
-         transition-delay: 0s;
-     background-color: transparent;
- text-decoration: none;
-     text-decoration-color: -moz-use-text-color;
-     text-decoration-line: none;
-     text-decoration-style: solid;
-     text-align: center;
- }
- 
- /*FOOTER*/
+ } 
+
+ .news_page_container {
+  flex-direction: column;
+  align-items: center;
+    background-color: #f3e5d8;
+  }
+
+.news_block {
+  width: 90%;
+  background-color: white;
+  border: 1px solid brown;
+  padding: 10px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+.news_full {
+  width: 98%;
+  background-color: white;
+   border: 1px solid brown;
+   padding: 10px;
+      margin: 10px;
+}
+
+.news_full h1 {
+  font-size: 180%;
+  padding: 25px;
+  color: #322016;
+  text-align: center;
+}
+
+.news_full img {
+display:block;
+    margin: 7px auto 7px auto;
+    max-width: 100%;
+  height: auto;
+}
+
+.news_block img {
+float:left; 
+    margin: 7px 10px 7px 0; 
+    }
+
+.news_page_container h1 {
+  font-size: 180%;
+  padding: 25px;
+  color: #322016;
+}
+
+.news_date {
+  padding-left: 5px;
+  font-style: italic;
+   color: #322016;
+  font-size: 80%;
+}
+
+.news_full_date {
+  padding-right: 5px;
+  font-style: italic;
+   color: #322016;
+  font-size: 90%;
+  text-align: right;
+}
+
+.news_block p, .news_full p {
+  margin-bottom: 5px;
+}
+
+
+
+.news_block h3 {
+  color: #322016;
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+.next_news {
+   margin: auto;
+  padding: 20px;
+}
+
+.read_more {
+  justify-content: space-between;
+    padding-top: 10px;
+}
+
+.read_more a, .next_news a {
+  padding-right: 10px;
+  text-decoration: none;
+  color: #112EED;
+  font-weight: bold;
+}
+
+.read_more a:hover, .next_news a:hover {
+  color: #322016;
+  text-decoration: underline;
+}
+
+.next_news a {
+  font-size: 150%;
+}
+
+@media (min-width: 1020px) {
+
+.news_block {
+  width: 48%;
+
+}
+}
+/*PAGE NEWS END*/
